--- a/blogpost.html
+++ b/blogpost.html
@@ -4,18 +4,11 @@
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
-	<div id="container">
-
-            <div id="cabecera">
-
-                Cabecera
-
-            </div>
-
+	    <div id="container">
             <div id="post">
-
-        	<h1>Aquí vamos a hacer un blog post</h1>
-	        <p>Y este es el párrafo de inicio</p>
+                <h1>Este es el título atractivo e interesante del post.</h1>
+                <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas.</p>
+                <p>Los blogs son la mejor forma de compartir información y tus ideas.  Mucho más que ir a conferencias o salir en YouTube.  Excepto si eres un rockstar.  Pero estadísticamente no lo eres... por ahora.</p>
             </div>
 
         </div>
